--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfólio profissional de um desenvolvedor de chatbots.">
-  <meta name="author" content="[Seu Nome]">
-  <title>Portfólio | Desenvolvedor de Chatbots</title>
+  <meta name="description" content="André Meliunas - Desenvolvedor Chatbot.">
+  <meta name="author" content="André Meliunas">
+  <title>André Meliunas | Desenvolvedor Chatbot</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
