--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <center>
       <div class="photo-content">
-        <img src="https://media.licdn.com/dms/image/v2/D4D03AQExe7PuVS4-2g/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1671797661170?e=2147483647&v=beta&t=zrG30h10JIAEF6UpI1LKLSs_wU6nw--7JYPFnAEjuZ0" alt="Foto de [Seu Nome]">
+        <img src="img/foto-atualizada - Copia.jpg" alt="Foto de [Seu Nome]">
       </div>
   </center>
 
@@ -33,37 +33,33 @@
   <section id="sobre">
     <h2>Sobre Mim</h2>
     <p>
-      Sou um desenvolvedor com mais de 3 anos de experiência na criação de chatbots personalizados e integração de APIs. 
-      Minha missão é transformar interações digitais em experiências simples, eficazes e envolventes.
+      Sou um desenvolvedor com mais de 3 anos de experiência na criação de chatbots personalizados e integração de APIs. Minha missão é transformar interações digitais em experiências simples, eficazes e envolventes.
     </p>
     <p>
-      Possuo expertise em plataformas como Blip, Dialogflow e n8n, além de um sólido conhecimento em JavaScript e manipulação de payloads JSON.
+      Possuo expertise em plataformas como Blip, Typebot e n8n, além de um sólido conhecimento em JavaScript e manipulação de payloads JSON.
     </p>
   </section>
 
   <!-- Projetos e Experiência Profissional -->
   <div class="grid-container">
     <section id="projetos">
-      <h2>Projetos</h2>
+      <h2>Projetos Chatbots</h2>
       <div class="projeto">
-        <h3>Chatbot de Atendimento ao Cliente</h3>
+        <h3>Agendamento de Consultas</h3>
         <p>
-          Plataforma: Blip | Descrição: Automatização de atendimentos para uma empresa de varejo, 
-          reduzindo 30% do tempo médio de resposta. Incluiu integração com APIs internas e sistema CRM.
+          Plataforma: n8n | Descrição: Integrado com um sistema interno, o bot realizava a verificação de agendamento livres e apresentava para o cliente, além de opções para cancelar, agendar e reagendar.
         </p>
       </div>
       <div class="projeto">
-        <h3>Chatbot de Suporte Técnico</h3>
+        <h3>Atendimento ao Cliente</h3>
         <p>
-          Plataforma: Dialogflow | Descrição: Assistente virtual para uma empresa de tecnologia, com detecção de 
-          intenção personalizada e envio automatizado de tickets de suporte.
+          Plataforma: Typebot e n8n| Descrição: Automatização de atendimentos para uma empresa de varejo, incluiu integração com APIs internas e sistema CRM.
         </p>
       </div>
       <div class="projeto">
-        <h3>Automação de Fluxos em n8n</h3>
+        <h3>Contratação</h3>
         <p>
-          Descrição: Desenvolvimento de workflows complexos para sincronização de dados entre sistemas, incluindo monitoramento 
-          de atividades e geração de relatórios automatizados.
+          Plataforma: Blip e API | Descrição: Automatização do processo de contratação de produtos de empresas renomadas no ramo de telecomunicação, incluindo a validação de informações do usuário e integração de API's internas
         </p>
       </div>
     </section>
@@ -75,7 +71,7 @@
         <p>
           Empresa: Chat2Desk Brasil<br>
           Período: 02/2022 - 09/2024<br>
-          Principais responsabilidades: Desenvolvimento de chatbots personalizados, integração de APIs REST e criação de fluxos interativos.
+          Principais responsabilidades: Desenvolvimento de chatbots personalizados, integração de APIs REST, automação de processos e suporte técnico ao cliente.
         </p>
       </div>
       <div class="experiencia">
@@ -83,7 +79,7 @@
         <p>
           Empresa: Macro Digital Sales<br>
           Período: 09/2024 - Presente<br>
-          Principais responsabilidades: Suporte técnico ao cliente, automação de processos e manutenção de bots existentes.
+          Principais responsabilidades: Desenvolvimento de chatbots personalizados Blip, integração de APIs REST, criação de fluxos interativos e manutenção de bots existentes.
         </p>
       </div>
     </section>
@@ -95,10 +91,15 @@
         <h2>Habilidades</h2>
         <p>Principais Tecnologias e Ferramentas:</p>
         <ul>
-          <li>Desenvolvimento de Chatbots: Blip, Dialogflow</li>
-          <li>Programação: JavaScript (manipulação de payloads JSON, APIs REST)</li>
-          <li>Automação: n8n, Integração de APIs</li>
-          <li>Design de Fluxos: UX para interações conversacionais</li>
+          <li>Desenvolvimento de Chatbots: Blip, Typebot</li>
+          <li>Programação: JavaScript - Manipulação e padronização de dados e aplicações WEB</li>
+          <li>Automação: n8n, APIs, Pipedream</li>
+          <li>Design de Fluxos: Figma, Draw.io, Whimsical</li>
+        </ul><br>
+        <p>Premiações</p>
+        <ul>
+          <li>Líder de Categoria em Chatbots</li>
+          B2B Stack - Dezembro 2022
         </ul>
       </section>
       
@@ -106,20 +107,19 @@
       <section id="experienciaAcad">
         <h2>Experiência Acadêmica</h2>
         <div class="experienciaAcad">
-          <h3>Faculdade de Engenharia de Sorocaba - FACENS</h3>
+          <h3>Análise e Desenvolvimento de Sistemas</h3>
           <p>
-            Curso: Análise e Desenvolvimento de Sistemas<br>
-            Período: 02/2022 - 09/2024<br>
-            Principais responsabilidades: Desenvolvimento de chatbots personalizados, integração de APIs REST e criação de fluxos interativos.
+            Faculdade de Engenharia de Sorocaba - FACENS<br>
+            Período: 02/2022 - 08/2024 <br>
+            Tópicos abordados: Aplicações WEB, Aplicativos Mobile (Android e iOS), Modelagem de Sistemas, Suporte à Área de Negócios, Geração de Informação, Criação de Aplicações sob Medida, Integração de Sistemas.
           </p>
         </div>
         <div class="experienciaAcad">
-          <h3>Escola Técnica Fernando Prestes - ETEC</h3>
+          <h3>Informática para Internet</h3>
           <p>
-            Curso: Informática para internet<br>
-            Período: 09/2024 - Presente<br>
-            Principais responsabilidades: Suporte técnico ao cliente, automação de processos e manutenção de bots existentes.
-          </p>
+            Escola Técnica Fernando Prestes - ETEC <br>
+            Período: 08/2020 - 11/2021 <br>
+            Tópicos abordados: Planejamento das ações de trabalho, documentação das aplicações, desenvolvimento e teste das aplicações para web e dispositivos móveis. Realiza a publicação, distribuição, manutenção e monitoria das aplicações para web e dispositivos móveis.
         </div>
       </section>
   </div>
@@ -129,8 +129,8 @@
     <h2>Contato</h2>
     <p>Está interessado em trabalhar comigo ou quer saber mais sobre os meus projetos?</p>
     <p>Email: <a href="mailto:seuemail@exemplo.com">andremeliunas@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/seuperfil" target="_blank">linkedin.com/in/andrehenriquemeliunas</a></p>
-    <p>GitHub: <a href="https://github.com/seuperfil" target="_blank">github.com/andremeliunas</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/andr%C3%A9-henrique-meliunas-401598186/ target="_blank">linkedin.com/in/andrehenriquemeliunas</a></p>
+    <p>GitHub: <a href="https://github.com/andrehenriquemeliunas" target="_blank">github.com/andremeliunas</a></p>
   </section>
   
   <button id="back-to-top" title="Voltar ao topo">↑</button>
