--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
   <!-- Header -->
@@ -43,7 +45,13 @@
   <!-- Projetos e Experiência Profissional -->
   <div class="grid-container">
     <section id="projetos">
-      <h2>Projetos Chatbots</h2>
+      <h2>
+        Projetos Chatbots 
+        <a href="projetos.html" target="_blank" rel="noopener noreferrer">
+          <i class="fa fa-external-link" aria-hidden="true"></i>
+        </a>
+      </h2>
+
       <div class="projeto">
         <h3>Agendamento de Consultas</h3>
         <p>
@@ -137,7 +145,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 André Meliunas. CNPJ: 52576710000168</p>
+    <p>&copy; 2025 André Meliunas. CNPJ: 52576710000168</p>
     <p>Todos os direitos reservados.</p>
   </footer>
 
