--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -5,19 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="André Meliunas - Desenvolvedor Chatbot.">
   <meta name="author" content="André Meliunas">
-  <title>André Meliunas | Desenvolvedor Chatbot</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+  <title></title>
 </head>
+<!--
 <body>
-  <!-- Header -->
   <header>
     <div class="header-content">
       <div class="text-content">
-        
         <h1>Olá, sou André Meliunas</h1>
         <p>Desenvolvedor Chatbot e Analista de Sistemas</p>
         <button onclick="window.location.href='#contato'">Entre em Contato</button>
@@ -27,11 +22,10 @@
 
   <center>
       <div class="photo-content">
-        <img src="img/foto-atualizada - Copia.jpg" alt="Foto de [Seu Nome]">
+        <img src="img/foto-atualizada - Copia.jpg" alt="Foto de André Meliunas">
       </div>
   </center>
 
-  <!-- Sobre Mim -->
   <section id="sobre">
     <h2>Sobre Mim</h2>
     <p>
@@ -42,7 +36,6 @@
     </p>
   </section>
 
-  <!-- Projetos e Experiência Profissional -->
   <div class="grid-container">
     <section id="projetos">
       <h2>
@@ -67,7 +60,7 @@
       <div class="projeto">
         <h3>Contratação</h3>
         <p>
-          Plataforma: Blip e API | Descrição: Automatização do processo de contratação de produtos de empresas renomadas no ramo de telecomunicação, incluindo a validação de informações do usuário e integração de API's internas
+          Plataforma: Blip e API | Descrição: Automatização do processo de contratação de produtos de empresas renomadas no ramo de telecomunicação, incluindo a validação de informações do usuário e integração de API's internas.
         </p>
       </div>
     </section>
@@ -93,7 +86,6 @@
     </section>
   </div>
 
-  <!-- Habilidades -->
   <div class="grid-container">
       <section id="habilidades">
         <h2>Habilidades</h2>
@@ -111,7 +103,6 @@
         </ul>
       </section>
       
-      <!-- Experiência Academica -->
       <section id="experienciaAcad">
         <h2>Experiência Acadêmica</h2>
         <div class="experienciaAcad">
@@ -132,23 +123,22 @@
       </section>
   </div>
 
-  <!-- Contato -->
   <section id="contato">
     <h2>Contato</h2>
     <p>Está interessado em trabalhar comigo ou quer saber mais sobre os meus projetos?</p>
-    <p>Email: <a href="mailto:seuemail@exemplo.com">andremeliunas@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/andr%C3%A9-henrique-meliunas-401598186/ target="_blank">linkedin.com/in/andrehenriquemeliunas</a></p>
+    <p>Email: <a href="mailto:andremeliunas@gmail.com">andremeliunas@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/andre-henrique-meliunas-401598186/" target="_blank">linkedin.com/in/andrehenriquemeliunas</a></p>
     <p>GitHub: <a href="https://github.com/andrehenriquemeliunas" target="_blank">github.com/andremeliunas</a></p>
   </section>
   
   <button id="back-to-top" title="Voltar ao topo">↑</button>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 André Meliunas. CNPJ: 52576710000168</p>
     <p>Todos os direitos reservados.</p>
   </footer>
-
+-->
   <script src="script.js"></script>
 </body>
 </html>
+
