--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>André Meliunas</title>
+    <title>André Meliunas | Desenvolvedor Chatbot</title>
     <link rel="stylesheet" href="stylenovo.css">
     <link rel="stylesheet" href="mobile.css" media="(max-width: 480px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <button id="theme-toggle" class="theme-toggle">Tema Escuro</button>
+    <button id="theme-toggle" class="theme-toggle">🌙</button>
     
     <!-- Título e profissão -->
     <header class="header">
