--- a/project.html
+++ b/project.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos Chatbot</title>
-    <link rel="stylesheet" href="styleProjetos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projetos | André Meliunas</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+  <link rel="stylesheet" href="styleProjetos.css">
 </head>
+
 <body>
-    <button id="theme-toggle" class="theme-toggle">Tema Escuro</button>
-    
-    <!-- Título e profissão -->
-    <header class="header">
-        <h1 id="nome">André Meliunas</h1>
-        <p id="profissao">Projetos em breve...</p>
-    </header>
+  <button id="theme-toggle" class="theme-toggle">🌙</button>
 
-    <footer class="footer">
-        <p>© 2025 André Meliunas CNPJ: 52576710000168</p>
-    </footer>
+<header class="header">
+    <h1 id="nome">Projetos de Chatbot 
+        <span id="info-icon" class="info-icon">ℹ️</span>
+    </h1>
+    <div id="tooltip" class="tooltip">Todos aplicáveis em todas as redes sociais.</div>
+</header>
 
-    <script src="scriptProjetos.js"></script>
+
+  <main class="container">
+    <section class="bot-container">
+      <div class="bot-card">
+        <h2>Chatbot Gerador de QR Code</h2>
+        <iframe src="https://typebot.co/gerador-de-qr-code-brch8rb"></iframe>
+      </div>
+
+      <div class="bot-card">
+        <h2>Chatbot focado: Nutricionista</h2>
+        <iframe src="https://typebot.co/nutricionista-rvr59ex"></iframe>
+      </div>
+
+      <div class="bot-card">
+        <h2>Chatbot integrado com Chat GPT</h2>
+        <iframe src="https://typebot.co/chat-gpt-7y3l6gr"></iframe>
+      </div>
+
+      <div class="bot-card">
+        <h2>Chatbot com consultas em API's</h2>
+        <iframe src="https://typebot.co/consulta-api-s-f3db424"></iframe>
+      </div>
+
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <p>&copy; 2025 André Meliunas CNPJ: 52576710000168</p>
+  </footer>
+
+  <script src="scriptProjetos.js"></script>
 </body>
+
 </html>
